--- a/php.ini
+++ b/php.ini
@@ -5,6 +5,8 @@ display_errors = On
 display_startup_errors = On
 log_errors = On
 date.timezone = "Asia/Taipei"
+upload_max_filesize = 15M
+post_max_size = 15M
 
 ; Symfony recommended php.ini settings.
 ; See http://symfony.com/doc/current/reference/requirements.html
