--- a/php.ini
+++ b/php.ini
@@ -13,7 +13,7 @@ post_max_size = 15M
 short_open_tag = Off
 magic_quotes_gpc = Off
 register_globals = Off
-session.auto_start = Off
+session.auto_start = on
 
 ; xdebug
 zend_extension=xdebug.so
