--- a/php.ini
+++ b/php.ini
@@ -5,8 +5,6 @@ display_errors = On
 display_startup_errors = On
 log_errors = On
 date.timezone = "Asia/Taipei"
-upload_max_filesize = 15M
-post_max_size = 15M
 
 ; Symfony recommended php.ini settings.
 ; See http://symfony.com/doc/current/reference/requirements.html
@@ -14,6 +12,20 @@ short_open_tag = Off
 magic_quotes_gpc = Off
 register_globals = Off
 session.auto_start = off
+
+; OPcache can only be compiled as a shared extension.
+;  See http://php.net/manual/en/opcache.installation.php
+ zend_extension = opcache.so
+ opcache.enable = 1
+ opcache.enable_cli = 1
+ opcache.memory_consumption = 128
+ opcache.interned_strings_buffer = 8
+ opcache.max_accelerated_files = 4000
+; ; If enabled, OPcache will check for updated scripts every
+; ; opcache.revalidate_freq seconds. When this directive is disabled, you must
+; ; reset OPcache manually via opcache_reset(), opcache_invalidate() or by
+; ; restarting the Web server for changes to the filesystem to take effect.
+; ; opcache.validate_timestamps = 0
 
 ; xdebug
 zend_extension=xdebug.so
