--- a/php.ini
+++ b/php.ini
@@ -25,7 +25,8 @@ session.auto_start = off
 ; ; opcache.revalidate_freq seconds. When this directive is disabled, you must
 ; ; reset OPcache manually via opcache_reset(), opcache_invalidate() or by
 ; ; restarting the Web server for changes to the filesystem to take effect.
-; ; opcache.validate_timestamps = 0
+opcache.validate_timestamps = 60
+opcache.fast_shutdown=1
 
 ; xdebug
 zend_extension=xdebug.so
